--- a/transition.html
+++ b/transition.html
@@ -150,7 +150,7 @@
     </ul>
 </div>
 
-<script type="text/javascript" src="iscroll-src.js"></script>
+<script type="text/javascript" src="iscroll.js"></script>
 <script type="text/javascript" src="iscroll-sticky.js"></script>
 <script type="text/javascript">
     var scroll = new iScroll('scroll', {
