--- a/examples/regular.html
+++ b/examples/regular.html
@@ -68,7 +68,7 @@
 </div>
 
 <script type="text/javascript" src="iscroll.js"></script>
-<script type="text/javascript" src="iscroll.stickyheaders.js"></script>
+<script type="text/javascript" src="../src/iscroll.stickyheaders.js"></script>
 <script type="text/javascript">
     var scroll = new iScroll('scroll');
     scroll.enableStickyHeaders('h1');
