--- a/examples/transition.html
+++ b/examples/transition.html
@@ -151,7 +151,7 @@
 </div>
 
 <script type="text/javascript" src="iscroll.js"></script>
-<script type="text/javascript" src="iscroll-sticky.js"></script>
+<script type="text/javascript" src="../src/iscroll.stickyheaders.js"></script>
 <script type="text/javascript">
     var scroll = new iScroll('scroll', {
         useTransition: true
