--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <h1>Sticky headers demo</h1>
 <ul>
-    <li><a href="regular.html">Regular headers</a></li>
-    <li><a href="transition.html">Transitioned headers</a></li>
+    <li><a href="examples/regular.html">Regular headers</a></li>
+    <li><a href="examples/transition.html">Transitioned headers</a></li>
 </ul>
 
 <script type="text/javascript">
