added iScroll5 support

--- a/examples/regular.html
+++ b/examples/regular.html
@@ -6,7 +6,7 @@
 </head>
 <meta name="HandheldFriendly" content="True" >
 <meta name="MobileOptimized" content="320" >
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" >
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" >
 <meta name="apple-mobile-web-app-capable" content="yes" >
 <body>
 
@@ -70,7 +70,7 @@
 <script type="text/javascript" src="iscroll.js"></script>
 <script type="text/javascript" src="../src/iscroll.stickyheaders.js"></script>
 <script type="text/javascript">
-    var scroll = new iScroll('scroll');
+    var scroll = new IScroll('#scroll');
     scroll.enableStickyHeaders('h1');
 </script>
 
