--- a/examples/transition.html
+++ b/examples/transition.html
@@ -153,7 +153,7 @@
 <script type="text/javascript" src="iscroll.js"></script>
 <script type="text/javascript" src="../src/iscroll.stickyheaders.js"></script>
 <script type="text/javascript">
-    var scroll = new iScroll('scroll', {
+    var scroll = new IScroll('#scroll', {
         useTransition: true
     });
     scroll.enableStickyHeaders('h1');
