fixed transition bug and added scroll event listener

--- a/examples/regular.html
+++ b/examples/regular.html
@@ -70,7 +70,7 @@
 <script type="text/javascript" src="iscroll.js"></script>
 <script type="text/javascript" src="../src/iscroll.stickyheaders.js"></script>
 <script type="text/javascript">
-    var scroll = new IScroll('#scroll');
+    var scroll = new IScroll('#scroll', { probeType: 3 });
     scroll.enableStickyHeaders('h1');
 </script>
 
