--- a/examples/transition.html
+++ b/examples/transition.html
@@ -154,6 +154,7 @@
 <script type="text/javascript" src="../src/iscroll.stickyheaders.js"></script>
 <script type="text/javascript">
     var scroll = new IScroll('#scroll', {
+        probeType: 3,
         useTransition: true
     });
     scroll.enableStickyHeaders('h1');
