--- a/examples/index.html
+++ b/examples/index.html
@@ -1,18 +1,78 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>iScroll sticky headers</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <meta name="HandheldFriendly" content="True" >
 <meta name="MobileOptimized" content="320" >
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" >
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" >
 <meta name="apple-mobile-web-app-capable" content="yes" >
 <body>
 
-<h1>Sticky headers demo</h1>
-<ul>
-    <li><a href="regular.html">Regular headers</a></li>
-    <li><a href="transition.html">Transitioned headers</a></li>
-</ul>
+<div id="scroll">
+    <ul class="list">
+        <li>
+            <h1>A</h1>
+            <ul>
+                <li>Aa</li>
+                <li>Aa</li>
+                <li>Aa</li>
+                <li>Aa</li>
+                <li>Aa</li>
+            </ul>
+        </li>
+        <li>
+            <h1>B</h1>
+            <ul>
+                <li>Bb</li>
+                <li>Bb</li>
+                <li>Bb</li>
+                <li>Bb</li>
+                <li>Bb</li>
+                <li>Bb</li>
+            </ul>
+        </li>
+        <li>
+            <h1>C</h1>
+            <ul>
+                <li>Cc</li>
+                <li>Cc</li>
+                <li>Cc</li>
+                <li>Cc</li>
+                <li>Cc</li>
+                <li>Cc</li>
+            </ul>
+        </li>
+        <li>
+            <h1>D</h1>
+            <ul>
+                <li>Dd</li>
+                <li>Dd</li>
+                <li>Dd</li>
+                <li>Dd</li>
+            </ul>
+        </li>
+        <li>
+            <h1>E</h1>
+            <ul>
+                <li>Ee</li>
+                <li>Ee</li>
+                <li>Ee</li>
+                <li>Ee</li>
+                <li>Ee</li>
+                <li>Ee</li>
+            </ul>
+        </li>
+    </ul>
+</div>
+
+<script type="text/javascript" src="iscroll-probe.js"></script>
+<script type="text/javascript" src="../src/iscroll.stickyheaders.js"></script>
+<script type="text/javascript">
+    var scroll = new IScroll('#scroll', { probeType: 3 });
+    scroll.enableStickyHeaders('h1');
+</script>
 
 <script type="text/javascript">
 
