Update link to demo

--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes" >
 <body>
 
-<h1>Sticky headers demo</h1>
-<ul>
-    <li><a href="examples/regular.html">Regular headers</a></li>
-    <li><a href="examples/transition.html">Transitioned headers</a></li>
-</ul>
+<h1><a href="examples/index.html">Sticky headers demo</a></h1>
 
 <script type="text/javascript">
 
